qa ページトップボタン作成

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -20,7 +20,7 @@ ul {
   list-style: none;
 }
 
-/* 部品 ボタン
+/* 部品 ボタン スクロール
 ------------------------------------------ */
 main {
   display: block;
@@ -66,6 +66,26 @@ main {
 @media (min-width: 768px) {
   .button--green {
     width: 300px;
+  }
+}
+
+.button-to-top {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: fixed;
+  bottom: 0;
+  right: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  font-size: 1.875rem;
+  color: #fff;
+  background-color: #0071CE;
+}
+
+@media (min-width: 768px) {
+  .button-to-top {
+    right: 11rem;
   }
 }
 
@@ -352,7 +372,7 @@ h1 {
 
 @media (min-width: 768px) {
   .voice {
-    max-width: 75rem;
+    max-width: 72.25rem;
     margin: 0 auto;
     padding: 5rem 1rem 7.0625rem;
   }
@@ -379,7 +399,7 @@ h1 {
     line-height: calc(32 / 45);
     letter-spacing: 0.125rem;
     margin-bottom: 0.5rem;
-}
+  }
 }
 
 .voice__sub-title {
@@ -409,8 +429,8 @@ h1 {
 @media (min-width: 768px) {
   .voice-container--box {
     padding: 2.5rem 1rem 2.5rem;
-    margin-right: 4.0625rem;
-    margin-left: 4.0625rem;
+    margin-right: 2.35rem;
+    margin-left: 2.45rem;
     max-width: 18.75rem;
   }
 }
@@ -437,8 +457,8 @@ h1 {
     line-height: calc(32 / 15);
     margin-bottom: 1rem;
   }
-
 }
+
 .voice_text {
   font-size: 0.875rem;
   font-weight: 400;
@@ -448,31 +468,32 @@ h1 {
 
 /* Slick矢印 */
 .slide-arrow {
-  width: 40px;
-  height: 40px;
+  width: 2rem;
+  height: 2rem;
   cursor: pointer;
 }
 
 .prev-arrow {
   position: absolute;
-  left: -3.125rem;
+  left: -2.5rem;
   top: 12.0625rem;
+  z-index: 100;
 }
 
 .next-arrow {
   position: absolute;
-  right: -3.125rem;
+  right: -2.5rem;
   top: 12.0625rem;
 }
 
 @media (min-width: 768px) {
   .prev-arrow {
-    left: 0.25rem;
+    left: -2%;
     top: 12.0625rem;
   }
 
   .next-arrow {
-    right: 0.25rem;
+    right: -2%;
     top: 12.0625rem;
   }
 }
@@ -516,4 +537,197 @@ h1 {
   color: #00AFBF;
   background-color: #00AFBF;
   opacity: 1;
+}
+
+/* qa
+--------------------------------------------------*/
+.qa {
+  padding: 2rem 1rem 2rem;
+  background: linear-gradient(to right, rgba(244, 255, 232, 1), rgba(198, 240, 254, 1));
+}
+
+@media (min-width: 768px) {
+  .qa {
+    padding: 2.5rem 1rem 2.5rem;
+  }
+}
+
+.qa-container__title {
+  display: flex;
+  flex-direction: column;
+}
+
+.qa__title {
+  font-family: "EB Garamond", sans-serif;
+  font-size: 1.875rem;
+  font-weight: bold;
+  color: #000;
+  line-height: calc(32 / 30);
+  text-align: center;
+  letter-spacing: 0.125rem;
+}
+
+@media (min-width: 768px) {
+  .qa__title {
+    font-size: 2.8125rem;
+    line-height: calc(32 / 45);
+    letter-spacing: 0.125rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+.qa__sub-title {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #000;
+  line-height: calc(32 / 16);
+  text-align: center;
+  padding-bottom: 2.25rem;
+  letter-spacing: 0.125rem;
+}
+
+@media (min-width: 768px) {
+  .qa__sub-title {
+    font-size: 1.25rem;
+    line-height: calc(32 / 20);
+    padding-bottom: 2.5rem;
+    letter-spacing: 0.125rem;
+  }
+}
+
+.qa-answer--container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  .qa-answer--container {
+    max-width: 600px;
+    margin: 0 auto;
+    row-gap: 1.5rem;
+  }
+}
+
+.qa-answer--box {
+  background-color: #fff;
+}
+
+@media (min-width: 768px) {
+  .qa-answer--box {
+    max-width: 37.5rem;
+  }
+}
+
+.qa-box {
+  display: flex;
+  padding: 1.25rem 1.025rem 1.25rem 1rem;
+}
+
+@media (min-width: 768px) {
+  .qa-box {
+    padding: 1.5rem 1.525rem 1.5rem 1.5rem;
+    align-items: center;
+  }
+}
+
+.qa-box::before {
+  content: "Q.";
+  display: flex;
+  font-family: "EB Garamond", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #444;
+  line-height: calc(28 / 16);
+  margin-right: 0.75rem;
+}
+
+@media (min-width: 768px) {
+  .qa-box::before {
+    font-size: 1.125rem;
+    line-height: calc(32 / 18);
+    margin-right: 1rem;
+  }
+
+}
+
+.qa-text {
+  font-size: 0.9375rem;
+  font-weight: 400;
+  color: #444;
+  line-height: calc(28 / 15);
+  margin-right: 0.25rem;
+}
+
+@media (min-width: 768px) {
+  .qa-text {
+    max-width: 30.6875rem;
+    margin-right: 3.45rem;
+  }
+}
+
+.qa-box .bi {
+  color: #000;
+}
+
+.qa-icon {
+  margin-top: 6px;
+}
+
+.open-active .qa-icon {
+  transform: rotate(180deg);
+  margin-bottom: 1.65rem;
+}
+
+@media (min-width: 768px) {
+  .open-active .qa-icon {
+    margin-bottom: 0.15rem;
+  }
+}
+
+.answer-container {
+  display: none;
+  padding: 0 1.0625rem 2.0625rem 1rem;
+}
+
+@media (min-width: 768px) {
+  .answer-container {
+    padding: 0 24px 24px 24px;
+  }
+}
+
+.answer-box {
+  display: flex;
+}
+
+.answer-box::before {
+  content: "A.";
+  display: flex;
+  font-family: "EB Garamond", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #444;
+  line-height: calc(28 / 16);
+  margin-right: 0.75rem;
+}
+
+@media (min-width: 768px) {
+  .answer-box::before {
+    font-size: 1.125rem;
+    line-height: calc(32 / 18);
+    margin-right: 1rem;
+  }
+}
+
+.answer-text {
+  font-size: 0.9375rem;
+  font-weight: 400;
+  color: #000;
+  line-height: calc(28 / 15);
+}
+
+@media (min-width: 768px) {
+  .answer-text {
+    letter-spacing: 0.4px;
+  }
 }
